搜索功能实现以及首页雏形

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.url=jdbc:mysql://localhost:3307/tsip?serverTimezone=Asia/Shang
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.web.resources.static-locations=file:D:
+
+# ?? Slf4j ??????
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
+# ?? MyBatis ????? DEBUG
+logging.level.com.finaldesign.backend.mapper=DEBUG
+mybatis-plus.mapper-locations=classpath:*.xml
+
