--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,23 @@
+#server??
 server.port=3000
 
+#mysql?????
 spring.datasource.username=root
 spring.datasource.password=wan20020926++
 spring.datasource.url=jdbc:mysql://localhost:3307/tsip?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#????????
 spring.web.resources.static-locations=file:D:
 
-# ?? Slf4j ??????
+#??????
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=100MB
+
+#??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
-# ?? MyBatis ????? DEBUG
 logging.level.com.finaldesign.backend.mapper=DEBUG
 mybatis-plus.mapper-locations=classpath:*.xml
+
+
 
