--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "echarts": "^5.5.0",
     "jquery": "^3.7.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
